shortage finder fetching 'alien' data